[gd_scene load_steps=2 format=3 uid="uid://degesuwqobesv"]

[ext_resource type="Script" uid="uid://dnhovrg8illwg" path="res://addons/quest_weaver/nodes/logic/objective_node/objective_node_editor.gd" id="1_3prtb"]

[node name="ObjectiveNodeEditor" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource("1_3prtb")

[node name="ActionPicker" type="OptionButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Target: "

[node name="TargetIdEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Paste Objective ID here..."
